Implement stats.bookkeeping.
This accounts for:
    - All base allocations, including arena headers;
    - All chunk headers;
    - Extent nodes used for huge allocations;
    - All allocations performed via a0{m,c}alloc.
    - Allocations made for tcache;
    - Allocations made for the quarantine;
    - Allocations made for heap profiling.

Note, however, that some of the allocations above are also accounted
for in several other stats such as stats.allocated or individual arena stats.

--- a/doc/jemalloc.xml.in
+++ b/doc/jemalloc.xml.in
@@ -1771,6 +1771,22 @@ malloc_conf = "xmalloc:true";]]></programlisting>
         does not include inactive chunks.</para></listitem>
       </varlistentry>
 
+      <varlistentry id="stats.bookkeeping">
+        <term>
+          <mallctl>stats.bookkeeping</mallctl>
+          (<type>size_t</type>)
+          <literal>r-</literal>
+          [<option>--enable-stats</option>]
+        </term>
+        <listitem><para>Total number of bytes in active pages allocated for
+        data structures that are internal to jemalloc.  Note that since some of
+        these allocations are made through arenas, this stat has some overlap
+		with <link linkend="stats.allocated">
+        <mallctl>stats.allocated</mallctl></link> as well as stats for
+        individual arenas.
+        </para></listitem>
+      </varlistentry>
+
       <varlistentry id="stats.chunks.current">
         <term>
           <mallctl>stats.chunks.current</mallctl>
