Add a flag to nallocx to have it round huge sizes to pages.
This can be used to implement malloc_good_size().

--- a/include/jemalloc/jemalloc_macros.h.in
+++ b/include/jemalloc/jemalloc_macros.h.in
@@ -21,6 +21,7 @@
 #  define MALLOCX_ZERO	((int)0x40)
 /* Bias arena index bits so that 0 encodes "MALLOCX_ARENA() unspecified". */
 #  define MALLOCX_ARENA(a)	((int)(((a)+1) << 8))
+#  define MALLOCX_ROUND_HUGE_TO_PAGES	((int)0x80)
 
 #ifdef JEMALLOC_HAVE_ATTR
 #  define JEMALLOC_ATTR(s) __attribute__((s))
